# refpo

./: .gitignore  README.md
gridworld/: LICENSE  README.md  eval_and_visualize_trajectories.py  main.py  requirements.txt  visualize.py
gridworld/models/: diffusion_policy.py  diffusion_policy02.py  diffusion_policy_fpo.py  fpo.py  network.py  ppo.py  rfpo.py  rfpo02.py
gridworld/utils/: arguments.py  eval_policy.py  gridworld.py
phc/: README.md  env_setup.sh  pyproject.toml
phc/configs/: fpo.ini  fpo_hand.ini  fpo_root.ini  gaussian_baseline.ini  gaussian_baseline_hand.ini  gaussian_baseline_root.ini
phc/gymtorch/: setup.py
phc/gymtorch/gymtorch/: __init__.py  gymtorch.cpp  wrapper.py
phc/puffer_phc/: __init__.py  clean_pufferl.py  environment.py  humanoid_phc.py  mjx_viser.py  motion_lib.py  policy.py  poselib_skeleton.py  render_env.py  render_env_viser.py  torch_utils.py
phc/puffer_phc/flow_matching_utils/: path.py  policy.py  scheduler.py  solver.py
phc/scripts/: convert_amass_data.py  train.py  vis_motion_mj.py  vis_motion_viser.py  visualize_from_two_checkpoints.py  visualize_motion.py
playground/: LICENSE  README.md  pyproject.toml  train_fpo.ipynb  train_ppo.ipynb
playground/scripts/: train_fpo.py  train_ppo.py
playground/src/: train.py
playground/src/flow_policy/: fpo.py  math_utils.py  networks.py  ppo.py  rfpo.py  rfpo02.py  rollouts.py
